// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with plural expenses correctly 1`] = `
<div>
  <p>
    Viewing 
    12
     
    expenses
     
    totalling 
    $32.00
  </p>
</div>
`;

exports[`should render summary with single expense correctly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     
    totalling 
    $3.20
  </p>
</div>
`;
